--- a/build.gradle
+++ b/build.gradle
@@ -20,8 +20,42 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+    compileOnly 'org.projectlombok:lombok'
+    annotationProcessor 'org.projectlombok:lombok'
+
+//    sping에서 화면을 만들어 사용자에게 주는(MVC) 기술 중 하나
+    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+
+//    db 드라이버 : mariaDB, mySQL, oracle
+    runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
+
+//    db 관리 기술 : JDBC, mybatis, jpa(spring data jpa)
+    implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
+    implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.4'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+
+//    값 검증을 위한 의존성
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
+
+
+//	로그인을 위한 security 의존성
+//  security의존성을 적용하자마자 모든 api요청에 대해 로그인을 요구(authentication객체의 생성 여부 확인)
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+//	jwt토큰 관련 라이브러리 추가
+    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
+// 	토큰의 JSON 인코딩/디코딩, 직렬화/파싱에 필요
+    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
+
+    //    batch의존성추가
+    implementation 'org.springframework.boot:spring-boot-starter-batch'
+
+    //    파일처리를 위한 aws 의존성 추가
+    implementation 'software.amazon.awssdk:s3:2.29.50'
+
+//    아래는 테스트 코드 작성을 위한 의존성
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
 tasks.named('test') {
