--- a/build.gradle
+++ b/build.gradle
@@ -31,11 +31,17 @@ dependencies {
     runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
     implementation 'software.amazon.awssdk:s3:2.29.50'
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
 //    sawgger 사용을 위한 의존성 추가
 //    http://localhost:8080/swagger-ui/index.html
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
+
+//    재고관련 rdb동기화 작업을 이벤트기반 비동기적으로 처리하기 위한 rabbitmq의존성 추가
+    implementation 'org.springframework.boot:spring-boot-starter-amqp'
+
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
 }
 
 tasks.named('test') {
